# Detector

./: .gitignore  CMakeLists.txt
include/: Detector.h  Init.h  Player.h  Util.h
src/: detector.cpp  init.cpp  main.cpp  player.cpp  util.cpp
